Fixes popups overlapping issues. (#11)
fix(editor): popups must overlap scrollbars

--- a/source/scss/sections/_information.scss
+++ b/source/scss/sections/_information.scss
@@ -1,7 +1,7 @@
 #information-container {
   display: none;
   position: absolute;
-  z-index: 5;
+  z-index: 10;
   top: 0;
   left: 0;
   right: 0;
