--- a/source/scss/sections/_options.scss
+++ b/source/scss/sections/_options.scss
@@ -1,7 +1,7 @@
 #options-container {
   display: none;
   position: absolute;
-  z-index: 5;
+  z-index: 10;
   top: 0;
   left: 0;
   right: 0;
